--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <nav>
                 <a class="logo" href="./index.html"><span>Web</span>Studio</a>
                 <ul >
-                    <li> <a href="">Студия</a></li>
-                    <li> <a href="./portfolio.html">Портфолио</a></li>
-                    <li> <a href="">Контакти</a></li>
+                    <li > <a href="">Студия</a></li>
+                    <li > <a href="./portfolio.html">Портфолио</a></li>
+                    <li > <a href="">Контакти</a></li>
                 </ul>
             </nav>
             <ul class="pretitleColor">
@@ -76,23 +76,31 @@
                 <ul>
                     <li class="teamPhotos">
                         <img src="./images/product-designer.jpg" alt="Product Designer" width="270"/>
+                        <div class="teamPhotosDescription">
                         <h3>Игорь Демьяненко</h3>
                         <p lang="en"> Product Designer</p>
+                        </div>
                     </li>
                     <li class="teamPhotos">
                         <img src="./images/frontend-developer.jpg" alt="Frontend Developer" width="270"/>
+                        <div class="teamPhotosDescription">
                         <h3>Ольга Репина</h3>
                         <p lang="en">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="teamPhotos">
                         <img src="./images/marketing.jpg" alt="Marketing" width="270" />
+                        <div class="teamPhotosDescription">
                         <h3>Николай Тарасов</h3>
                         <p lang="en">Marketing</p>
+                        </div>
                     </li>
                     <li class="teamPhotos">
                         <img src="./images/ui-designer.jpg" alt="UI Designer" width="270" />
+                        <div class="teamPhotosDescription">
                         <h3>Михаил Ермаков</h3>
                         <p lang="en">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
                 </div>
